# agentsync

./: .gitignore  Cargo.toml  LICENSE  README.md  agentsync.json  clippy.toml
.agentsync/rules/: commands.md  core-modules.md  parsing-converting.md  project-structure.md  rust.md  security.md  sync.md  test-always.md  test-globs.md  test-intelligent.md  test-manual.md  test-rule.md  testing.md
.cursor/rules/: commands.mdc  core-modules.mdc  parsing-converting.mdc  project-structure.mdc  rust.mdc  security.mdc  sync.mdc  test-always.mdc  test-globs.mdc  test-intelligent.mdc  test-manual.mdc  test-rule.mdc  testing.mdc
.github/instructions/: commands.instructions.md  core-modules.instructions.md  parsing-converting.instructions.md  project-structure.instructions.md  rust.instructions.md  security.instructions.md  sync.instructions.md  test-always.instructions.md  test-globs.instructions.md  test-intelligent.instructions.md  test-manual.instructions.md  test-rule.instructions.md  testing.instructions.md
.windsurf/rules/: commands.md  core-modules.md  parsing-converting.md  project-structure.md  rust.md  security.md  sync.md  test-always.md  test-globs.md  test-intelligent.md  test-manual.md  test-rule.md  testing.md
scripts/: build-release.sh
src/: cli.rs  commands.rs  config.rs  error.rs  fs.rs  lib.rs  main.rs  models.rs  parser.rs  security.rs  sync.rs
src/converter/: copilot.rs  cursor.rs  mod.rs  windsurf.rs
src/processor/: copilot.rs  cursor.rs  mod.rs  windsurf.rs
tests/: cli_tests.rs  converter_tests.rs  error_formatting_tests.rs  error_tests.rs  fs_tests.rs  integration_tests.rs  parser_tests.rs  sync_tests.rs
tests/common/: mod.rs
tests/fixtures/agentsync/: rust-dev.md
tests/fixtures/copilot/: python-standards.instructions.md
tests/fixtures/cursor/: python-dev.mdc  react-components.mdc
tests/fixtures/windsurf/: python-dev.md
