[package]
name = "agentsync"
version = "0.1.0"
edition = "2021"
authors = ["AgentSync Contributors"]
description = "CLI tool for synchronizing AI agent rules files across various LLM platforms."
license = "MIT"
repository = "https://github.com/yourusername/agentsync"
homepage = "https://github.com/yourusername/agentsync"
documentation = "https://github.com/yourusername/agentsync"
readme = "README.md"
keywords = ["cli", "ai", "agent", "sync", "cursor"]
categories = ["command-line-utilities", "development-tools"]

[lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
exit = "warn"
get_unwrap = "warn"
use_self = "warn"

[dependencies]
anstream = { version = "0.6.15" }
camino = { version = "1.1.7" }
clap = { version = "4.5.50", features = ["derive", "cargo"] }
fs-err = { version = "3.1.3" }
glob = { version = "0.3.3" }
indoc = { version = "2.0.5" }
itertools = { version = "0.14.0" }
owo-colors = { version = "4.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_yaml = { version = "0.9.33" }
strsim = { version = "0.11.1" }
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = { version = "0.27.0" }
tempfile = { version = "3.23.0" }
thiserror = { version = "2.0.17" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_fs = { version = "1.1.3" }
predicates = { version = "3.1.3" }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
